--- a/RoomPlanner/RoomPlanner/RoomPlanner.csproj
+++ b/RoomPlanner/RoomPlanner/RoomPlanner.csproj
@@ -69,6 +69,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Element.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
