--- a/RoomPlanner/RoomPlanner/RoomPlanner.csproj
+++ b/RoomPlanner/RoomPlanner/RoomPlanner.csproj
@@ -95,5 +95,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Проект.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="dlGGQ5ebAyw.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
